--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,10 @@
 spring:
   kafka:
-    admin:
-      consumer:
+    consumer:
         group-id: tpd-loggers
         auto-offset-reset: earliest
-        bootstrap-servers: 192.168.0.107:9092
-        
-  tpd:
+    bootstrap-servers: 192.168.0.107:9092      
+tpd:
     topic-name: kingslake
-    messags-per-request: 10
+    message-per-request: 10
     
